    - implemented Roland GS NRPN 1ErrH which allows to set chorus send per
      note (in this implementation of the sampler its simply hard routed to
      the 2nd effect send of the sampler channel, no matter what the actual
      effect type is)
    - implemented support for internal LADSPA effects
    - raised limit of program change queue from 100 to 512
      (as suggested by Alex Stone)

  * Gigasampler format engine:
    - implemented the "round robin keyboard" dimension
    - fixed round robin and random dimensions for cases when number of
      dimension zones is not a power of two
    - made round robin use a counter for each region instead of each
      key

  * SFZ format engine:
    - Initial implementation (not usable yet)
    - added support for v2 multiple stage envelope generators
    - added a fine-tuned v1 envelope generator instead of using the
      one from the gig engine
    - fixed memory leak and memory handling errors
    - added support for trigger=first, trigger=legato and sw_previous
    - allow non-numerical key values ("C#4" for example)
    - "key" opcode now sets pitch_keycenter too
    - fixed error when unloading instrument with same sample used by
      multiple regions
    - added some opcode aliases, like loopmode for loop_mode, to be
      more compatible
    - added support for trigger=release and rt_decay
    - added support for off_mode=normal
    - added support for random, seq_position, seq_length and volume
    - added v1 LFO opcodes to parser (no support in engine yet)
    - added support for amp_veltrack and amp_velcurve_N
    - fine-tuned the default velocity curve
    - added support for transpose
    - fixed crash when using sw_down/up
    - improved logic for sw_lokey/hikey/up/down/last
    - added more v1 aliases to parser
    - reduced memory usage for sfz data
    - RT-safeness: avoid malloc in audio thread
    - fixed a bug that could cause voice stealing to fail
    - optimized sample lookup